# FastAPI_core

./: .gitignore  crud.py  database.py  db_models.py  main.py  pyproject.toml  seed.py  test.py
routers/: products.py  users.py  ws.py
schemas/: users.py
