[project]
name = "fastapi-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.135.3",
    "pydantic[email]>=2.13.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]
